2015-06-10  Karl Berry  <karl@freefriends.org>

	* doc/refcard/txicmdcheck (read_refcard): \escape all the {
	due to new warning in perl 5.22.0.  Also \escape the }
	for consistency.

2015-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_virtual_index): Change type of a local 
	variable to match expected type of argument to next_index_match.
	* info/dir.c (dir_entry_of_infodir),
	* info/info-utils.c (info_get_menu_entry_by_label): Add 
	parentheses around assignment for clarity.
	* info/info-utils.c (printed_representation): Change declaration 
	of a variable from an unsigned char * to a char * and cast it 
	when we need to check the referent is in a range.

2015-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* gnulib: Add stdarg module, to try to fix compilations in C89 
	mode due to lack of va_copy.
	* README-hacking: Add note how to ignore files in SVN.

2015-06-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Timeout-test.inc: Also check that "time -t 0" produces 
	no output.  (Attempt at stopping failures under OpenBSD 5.5.)

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac (AC_CHECK_HEADERS): Check for stropts.h.
	* info/pseudotty.c [HAVE_STROPTS_H]: Perform STREAMS ioctl's on 
	slave device, as recommended in the GNU C Library Reference 
	Manual.  (Attempt at stopping hang of test replace-viewed.sh 
	under Solaris 10.)

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/c-u-m-x-scroll-forward: Synch with controlled program 
	before sending in typed input.  (Attempt at fixing test failures 
	under CentOS.)

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/index-apropos.sh: Don't send C-g to controlled program.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/replace-viewed.sh: Use rm -f instead of rm.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (forget_info_file): Function replaced.  Don't 